opam-version: "2.0"
name: "pulsar"
version: "0.1"
maintainer: "Adrien Guatto <adrien@guatto.org>"
authors: "Adrien Guatto <adrien@guatto.org>"
homepage: "http://github.com/adrieng/pulsar"
bug-reports: "https://github.com/adrieng/pulsar/issues"
license: "GPL-3.0"
dev-repo: "git://git@github.com:adrieng/pulsar.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
install: [
  ["dune" "install" "-p" name]
]
remove: ["ocamlfind" "remove" name]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {build & >= "1.1"}
  "ocamlfind"
  "pprint"
]
synopsis: "Implementation of a temporal functional language"
description: """
This package provides a compiler for an experimental functional language with
temporal features.
"""
