opam-version: "1.2"
name: "warp"
version: "0.0"
synopsis: "Library with time-warp manipulation facilities"
maintainer: "Adrien Guatto <adrien@guatto.org>"
authors: "Adrien Guatto <adrien@guatto.org>"
homepage: "https://github.com/adrieng/pulsar"
bug-reports: "https://github.com/adrieng/pulsar/issues"
license: "GPL-3.0-or-later"
dev-repo: "git://github.com:adrieng/pulsar.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base-unix"
  "dune" {build & >= "1.0"}
  "ocamlfind" {build}
  "yojson" {>= "1.4.0"}
]
available: ocaml-version >= "4.03.0"
