(library
 (name pulsar)
 (wrapped false)
 (libraries warp unix str sedlex menhirLib)
 (preprocess
  (per_module
   ((pps sedlex.ppx)
    lexer))))

(rule
 (targets parser.ml parser.mli)
 (deps
  (:< parser.mly))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:menhir} --explain --table --external-tokens Lexer %{<}))))

(env
  (dev
    (flags (:standard -w -32))))
